--- a/vignettes/S03-analyze_sims.Rmd
+++ b/vignettes/S03-analyze_sims.Rmd
@@ -20,21 +20,33 @@ library(arrow)
 library(dplyr)
 ```
 
+#functions
 ```{r}
-get_results <- function(peak_test, lextr_me, lextr_gr, gam_params, func_type_p = NULL, func_type_np = NULL){
+get_results <- function(peak_test, lextr_me, lextr_gr, gam_params, func_type_p = NULL, func_type_np = NULL, me = TRUE){
+  
+  if(!me){
+    lextr_me <- NULL
+  }
   results <- list()
-  results$power <- get_power(peak_test = peak_test, lextr_me = lextr_me, lextr_gr = lextr_gr, func_type = func_type_p)
-  results$fperror <-  get_fperror(peak_test = peak_test, lextr_me = lextr_me, lextr_gr = lextr_gr, func_type = func_type_np)
-  results$coverage <- get_coverage(lextr_me = lextr_me, lextr_gr = lextr_gr, func_type = func_type_p)
-  results$precision <- get_precision(lextr_me = lextr_me, lextr_gr = lextr_gr, func_type = func_type_p)
-  results$anomalies <- get_weirdos(peak_test = peak_test, lextr_me = lextr_me, lextr_gr = lextr_gr, gam_params = gam_params, func_type = c(func_type_p, func_type_np))
+  results$power <- get_power(peak_test = peak_test, lextr_me = lextr_me, lextr_gr = lextr_gr, func_type = func_type_p, me = me)
+  results$fperror <-  get_fperror(peak_test = peak_test, lextr_me = lextr_me, lextr_gr = lextr_gr, func_type = func_type_np, me= me)
+  results$coverage <- get_coverage(lextr_me = lextr_me, lextr_gr = lextr_gr, func_type = func_type_p, me= me)
+  results$precision <- get_precision(lextr_me = lextr_me, lextr_gr = lextr_gr, func_type = func_type_p, me= me)
+  results$bias <- get_bias(lextr_me = lextr_me, lextr_gr = lextr_gr, func_type = func_type_p, me = me)
+  results$anomalies <- get_weirdos(peak_test = peak_test, lextr_me = lextr_me, lextr_gr = lextr_gr, gam_params = gam_params, func_type = c(func_type_p, func_type_np), me= me)
   
   return(results)
 }
 
-get_power <- function(peak_test, lextr_me, lextr_gr, func_type){
+get_power <- function(peak_test, lextr_me, lextr_gr, func_type, me = TRUE){
   peak_test <-  peak_test
-  lextr_me <- lextr_me
+  
+  if(me){
+      lextr_me <- lextr_me
+  }else{
+    lextr_me <- NULL
+  }
+  
   lextr_gr <- lextr_gr
   func_type <- func_type
   peak_test_pr <- peak_test%>%
@@ -47,6 +59,7 @@ get_power <- function(peak_test, lextr_me, lextr_gr, func_type){
               lines3 = sum(lines3_u==1)/n())%>%
     ungroup()
   
+  if(me){
   lextr_me_pr <-  lextr_me%>%
     filter(func%in% func_type)%>%
     group_by(scenario_id, func, param, rep, error, dup, sample_id)%>%
@@ -56,6 +69,9 @@ get_power <- function(peak_test, lextr_me, lextr_gr, func_type){
     summarize(pr_me = sum(me)/n(),
               n_me=n())%>%
     ungroup()
+  } else {
+    lextr_me_pr <- NULL
+  }
   
   lextr_gr_pr <-  lextr_gr%>%
     filter(func%in% func_type)%>%
@@ -67,14 +83,16 @@ get_power <- function(peak_test, lextr_me, lextr_gr, func_type){
               n_gr=n())%>%
     ungroup()
   
-  power <- peak_test_pr%>%
-    left_join( lextr_me_pr, by=c("scenario_id", "func", "param", "error", "dup"))%>%
-    left_join(lextr_gr_pr, by=c("scenario_id", "func", "param", "error", "dup"))
+  power <- peak_test_pr
+  if(me){
+    power <- left_join(power, lextr_me_pr, by=c("scenario_id", "func", "param", "error", "dup"))
+  }
+  power <- left_join(power, lextr_gr_pr, by=c("scenario_id", "func", "param", "error", "dup"))
 
   return(power)
 }
 
-get_fperror <- function(peak_test, lextr_me, lextr_gr, func_type){
+get_fperror <- function(peak_test, lextr_me, lextr_gr, func_type, me = TRUE){
   peak_test_fp <- peak_test%>%
     filter(func %in% func_type)%>%
     group_by(scenario_id, func, param, error, dup)%>%
@@ -85,15 +103,17 @@ get_fperror <- function(peak_test, lextr_me, lextr_gr, func_type){
               lines3 = sum(lines3_u==1)/n())%>%
     ungroup()
   
-  lextr_me_fp <-  lextr_me%>%
-    filter(func%in% func_type)%>%
-    group_by(scenario_id, func, param, rep, error, dup, sample_id)%>%
-    summarize(me = any(feature == "local_max"))%>%
-    ungroup()%>%
-    group_by(scenario_id, func, param, error, dup )%>%
-    summarize(pr_me = sum(me)/n(),
-              n_me=n())%>%
-    ungroup()
+  if(me){
+    lextr_me_fp <-  lextr_me%>%
+      filter(func%in% func_type)%>%
+      group_by(scenario_id, func, param, rep, error, dup, sample_id)%>%
+      summarize(me = any(feature == "local_max"))%>%
+      ungroup()%>%
+      group_by(scenario_id, func, param, error, dup )%>%
+      summarize(pr_me = sum(me)/n(),
+                n_me=n())%>%
+      ungroup()
+  }
   
   lextr_gr_fp <-  lextr_gr%>%
     filter(func%in% func_type)%>%
@@ -105,40 +125,44 @@ get_fperror <- function(peak_test, lextr_me, lextr_gr, func_type){
               n_gr=n())%>%
     ungroup()
   
-  fp_error <- peak_test_fp%>%
-    left_join( lextr_me_fp, by=c("scenario_id", "func", "param", "error", "dup"))%>%
-    left_join(lextr_gr_fp, by=c("scenario_id", "func", "param", "error", "dup"))
+  fp_error <- peak_test_fp
+  if(me){
+    fp_error <- left_join(fp_error, lextr_me_fp, by=c("scenario_id", "func", "param", "error", "dup"))
+  }
+  fp_error <- left_join(fp_error, lextr_gr_fp, by=c("scenario_id", "func", "param", "error", "dup"))
 
   return(fp_error)
 }
 
-get_coverage <- function(lextr_me, lextr_gr, func_type){
-  capture_me <- lextr_me%>%
-    filter(func %in% func_type)%>%
-    rowwise()%>%
-    mutate(capture = case_when(
-      feature %in% c("local_max", "boundary_max", "notrend") ~ (peak>=x_start & peak<=x_end),
-      !( feature %in% c("local_max", "boundary_max", "notrend"))~ 0))%>%
-    ungroup()
-  
-  coverage_me <- capture_me %>%
-    group_by(scenario_id, func, param, error, dup, sample_id)%>%
-    summarize(capture = sum(capture))%>%
-    ungroup()%>%
-    group_by(scenario_id, func, param, error, dup)%>%
-    summarize(coverage_me = sum(capture)/n(),
-              n_me = n())%>%
-    ungroup()
-  
-  coverage_me_max <- capture_me %>%
-    filter(feature != "notrend")%>%
-    group_by(scenario_id, func, param, error, dup, sample_id)%>%
-    summarize(capture = sum(capture))%>%
-    ungroup()%>%
-    group_by(scenario_id, func, param, error, dup)%>%
-    summarize(coverage_me_max = sum(capture)/n(),
-              n_me_max = n())%>%
-    ungroup()
+get_coverage <- function(lextr_me, lextr_gr, func_type, me = TRUE){
+  if(me){
+    capture_me <- lextr_me%>%
+      filter(func %in% func_type)%>%
+      rowwise()%>%
+      mutate(capture = case_when(
+        feature %in% c("local_max", "boundary_max", "notrend") ~ (peak>=x_start & peak<=x_end),
+        !( feature %in% c("local_max", "boundary_max", "notrend"))~ 0))%>%
+      ungroup()
+    
+    coverage_me <- capture_me %>%
+      group_by(scenario_id, func, param, error, dup, sample_id)%>%
+      summarize(capture = sum(capture))%>%
+      ungroup()%>%
+      group_by(scenario_id, func, param, error, dup)%>%
+      summarize(coverage_me = sum(capture)/n(),
+                n_me = n())%>%
+      ungroup()
+    
+    coverage_me_max <- capture_me %>%
+      filter(feature != "notrend")%>%
+      group_by(scenario_id, func, param, error, dup, sample_id)%>%
+      summarize(capture = sum(capture))%>%
+      ungroup()%>%
+      group_by(scenario_id, func, param, error, dup)%>%
+      summarize(coverage_me_max = sum(capture)/n(),
+                n_me_max = n())%>%
+      ungroup()
+  }
   
    capture_gr <- lextr_gr%>%
     filter(func %in% func_type)%>%
@@ -167,15 +191,19 @@ get_coverage <- function(lextr_me, lextr_gr, func_type){
               n_gr_max = n())%>%
     ungroup()
   
-  coverage <- coverage_me%>%
-    left_join( coverage_me_max, by=c("scenario_id", "func", "param", "error", "dup"))%>%
-    left_join( coverage_gr, by=c("scenario_id", "func", "param", "error", "dup"))%>%
+  coverage <- coverage_gr%>%
     left_join( coverage_gr_max, by=c("scenario_id", "func", "param", "error", "dup"))
+  if(me){
+  coverage <- coverage%>%
+    left_join( coverage_me, by=c("scenario_id", "func", "param", "error", "dup"))%>%
+    left_join( coverage_me_max, by=c("scenario_id", "func", "param", "error", "dup"))
+  }
   
   return(coverage)
 }
 
-get_precision <- function(lextr_me, lextr_gr, func_type){
+get_precision <- function(lextr_me, lextr_gr, func_type, me = TRUE){
+  if(me){
     precision_me <- lextr_me%>%
     filter(func %in% func_type, feature==c("local_max"))%>%
     mutate(width= x_end-x_start)%>%
@@ -189,7 +217,8 @@ get_precision <- function(lextr_me, lextr_gr, func_type){
               n_2etseg_me = sum(n_seg>=2),
               n_me=n())%>%
     ungroup()
-    
+  }
+  
   precision_gr <- lextr_gr%>%
     filter(func %in% func_type, feature==c("local_max"))%>%
     mutate(width= x_end-x_start)%>%
@@ -204,18 +233,111 @@ get_precision <- function(lextr_me, lextr_gr, func_type){
               n_gr=n())%>%
     ungroup()
   
-  precision <- left_join(precision_me, precision_gr, by=c("scenario_id", "func", "param", "error", "dup"))
+  if(me){
+    precision <- left_join(precision_me, precision_gr, by=c("scenario_id", "func", "param", "error", "dup"))
+  } else {
+    precision <- precision_gr
+  }
+  
+  return(precision)
 }
 
-get_weirdos <- function(peak_test, lextr_me, lextr_gr, gam_params, func_type){
-  # samples with more that one extremeum
-  n_extrem_me <- lextr_me %>%
-    group_by(sample_id)%>%
-    summarize(n_extrem = sum( feature %in% c("local_min", "local_max")))%>%
-    ungroup()%>%
-    filter(n_extrem>=3)%>%
-    mutate(method = "me")
+get_bias <- function(lextr_me, lextr_gr, func_type, me = TRUE){
+  if(me){
+    bias_me <- lextr_me%>%
+      filter(feature %in% c("local_max", "boundary_max", "notrend"))%>%
+      mutate(pu_dist = peak - x_end,
+             pl_dist = peak - x_start)%>%
+      mutate(bias = case_when(
+        pu_dist<0 & pl_dist>0 ~0,
+        pu_dist<0 & pl_dist<0 ~ pl_dist,
+        pu_dist>0 & pl_dist>0 ~pu_dist))%>%
+      group_by(func, param ,rep, error, dup, scenario_id, sample_id)%>%
+      summarize( n_int_me = n(), 
+                 bias = sum(bias, na.rm = TRUE))%>%
+      ungroup()%>%
+      group_by(func, param, error, dup, scenario_id)%>%
+      summarize(bias_avg_me = mean(bias),
+                bias_sd_me = sd(bias),
+                n_me = n())%>%
+      ungroup()
+    
+    bias_me_max <- lextr_me%>%
+      filter(feature %in% c("local_max", "boundary_max"))%>%
+      mutate(pu_dist = peak- x_end,
+             pl_dist = peak - x_start)%>%
+      mutate(bias = case_when(
+        pu_dist<0 & pl_dist>0 ~0,
+        pu_dist<0 & pl_dist<0 ~ pl_dist,
+        pu_dist>0 & pl_dist>0 ~pu_dist))%>%
+      group_by(func, param ,rep, error, dup, scenario_id, sample_id)%>%
+      summarize( n_int_me = n(), 
+                 bias = sum(bias, na.rm = TRUE))%>%
+      ungroup()%>%
+      group_by(func, param, error, dup, scenario_id)%>%
+      summarize(bias_avg_me_max = mean(bias),
+                bias_sd_me_max = sd(bias),
+                n_me_max = n())%>%
+      ungroup()
+  }
   
+  bias_gr <- lextr_gr%>%
+    filter(feature %in% c("local_max", "boundary_max", "notrend"))%>%
+    mutate(pu_dist = peak - x_end,
+           pl_dist = peak - x_start)%>%
+    mutate(bias = case_when(
+      pu_dist<0 & pl_dist>0 ~0,
+      pu_dist<0 & pl_dist<0 ~ pl_dist,
+      pu_dist>0 & pl_dist>0 ~pu_dist))%>%
+      group_by(func, param ,rep, error, dup, scenario_id, sample_id)%>%
+      summarize( n_int_me = n(), 
+                 bias = sum(bias, na.rm = TRUE))%>%
+      ungroup()%>%
+      group_by(func, param, error, dup, scenario_id)%>%
+      summarize(bias_avg_gr = mean(bias),
+                bias_sd_gr = sd(bias),
+                n_gr = n())%>%
+      ungroup()
+  
+  bias_gr_max <- lextr_gr%>%
+    filter(feature %in% c("local_max", "boundary_max"))%>%
+    mutate(pu_dist = peak- x_end,
+           pl_dist = peak - x_start)%>%
+    mutate(bias = case_when(
+      pu_dist<0 & pl_dist>0 ~0,
+      pu_dist<0 & pl_dist<0 ~ pl_dist,
+      pu_dist>0 & pl_dist>0 ~ pu_dist))%>%
+      group_by(func, param ,rep, error, dup, scenario_id, sample_id)%>%
+      summarize( n_int_me = n(), 
+                 bias = sum(bias, na.rm = TRUE))%>%
+      ungroup()%>%
+      group_by(func, param, error, dup, scenario_id)%>%
+      summarize(bias_avg_gr_max = mean(bias),
+                bias_sd_gr_max = sd(bias),
+                n_gr_max = n())%>%
+      ungroup()
+  
+  bias <- bias_gr%>%
+    left_join( bias_gr_max, by=c("scenario_id", "func", "param", "error", "dup"))
+  if(me){
+    bias <- bias%>%
+      left_join(bias_me, by=c("scenario_id", "func", "param", "error", "dup"))%>%
+      left_join(bias_me_max, by=c("scenario_id", "func", "param", "error", "dup"))
+  }
+  
+  return(bias)
+}
+
+get_weirdos <- function(peak_test, lextr_me, lextr_gr, gam_params, func_type, me = TRUE){
+  # samples with more that one extremeum
+  if(me){
+    n_extrem_me <- lextr_me %>%
+      group_by(sample_id)%>%
+      summarize(n_extrem = sum( feature %in% c("local_min", "local_max")))%>%
+      ungroup()%>%
+      filter(n_extrem>=3)%>%
+      mutate(method = "me")
+  }
   n_extrem_gr <- lextr_gr %>%
     group_by(sample_id)%>%
     summarize(n_extrem = sum( feature %in% c("local_min", "local_max")))%>%
@@ -223,8 +345,12 @@ get_weirdos <- function(peak_test, lextr_me, lextr_gr, gam_params, func_type){
     filter(n_extrem>=3)%>%
     mutate(method = "gr")
   
-  many_extrema <- bind_rows(n_extrem_me, n_extrem_gr)
-  
+  if(me){
+    many_extrema <- bind_rows(n_extrem_me, n_extrem_gr)
+  }else{
+    many_extrema <- n_extrem_gr
+  }
+
   high_edf <- gam_params$sample_id[which(gam_params$edf>=6)]
   high_rsq <- gam_params$sample_id[which(gam_params$r_sq_adj>0.75)]
   
@@ -239,7 +365,8 @@ get_weirdos <- function(peak_test, lextr_me, lextr_gr, gam_params, func_type){
 ##Experiment 1
 ```{r}
 setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
-sim_dat_e1 <- read_parquet("data-raw/sim/data/sim_dat_e1.parquet")
+if(!exists("ref_metadata_e1")){
+  sim_dat_e1 <- read_parquet("data-raw/sim/data/sim_dat_e1.parquet")
   #adding reference data
   ref_metadata_e1 <- sim_dat_e1%>%
     group_by(func, param, rep, error, dup, scenario_id)%>%
@@ -247,6 +374,7 @@ sim_dat_e1 <- read_parquet("data-raw/sim/data/sim_dat_e1.parquet")
     mutate(peak = case_when(func=="norm"~param,
                             func == "linear"~NA))%>%
     ungroup()
+}
 
 e1_gam_params <- read_parquet("data-raw/sim/results/gam_params_e1.parquet")
 e1_gam_params <- full_join(ref_metadata_e1, e1_gam_params, by="sample_id")
@@ -264,21 +392,26 @@ e1_summary <- get_results(peak_test = e1_peaktest_results,
                           lextr_gr =  e1_lextrema_results_gratia, 
                           gam_params = e1_gam_params, 
                           func_type_p = "norm", 
-                          func_type_np = "linear")
+                          func_type_np = "linear", 
+                          me = TRUE)
+
+saveRDS(object = e1_summary, file = "data-raw/sim/analy_results/e1_summary.RDS")
 
 ```
 ##Experiment 2
 ```{r}
 setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
-sim_dat_e2 <- read_parquet("data-raw/sim/data/sim_dat_e2.parquet")
+
+if(!exists("ref_metadata_e2")){
+  sim_dat_e2 <- read_parquet("data-raw/sim/data/sim_dat_e2.parquet")
   #adding reference data
   ref_metadata_e2 <- sim_dat_e2%>%
     group_by(func, param, rep, error, dup, scenario_id)%>%
     summarize(sample_id=first(sample_id))%>%
-        mutate(peak = case_when(func=="norm"~param,
+    mutate(peak = case_when(func=="norm"~param,
                             func == "linear"~NA))%>%
     ungroup()
-
+}
 e2_gam_params <- read_parquet("data-raw/sim/results/gam_params_e2.parquet")
 e2_gam_params <- full_join(ref_metadata_e2, e2_gam_params, by="sample_id")
 
@@ -297,12 +430,17 @@ e2_summary <- get_results(peak_test = e2_peaktest_results,
                           lextr_gr =  e2_lextrema_results_gratia, 
                           gam_params = e2_gam_params, 
                           func_type_p = "norm", 
-                          func_type_np = "linear")
+                          func_type_np = "linear", 
+                          me = TRUE)
+
+saveRDS(object = e2_summary, file = "data-raw/sim/analy_results/e2_summary.RDS")
 ```
 #Experiment 3 ####
 ```{r}
 setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
-sim_dat_e3 <- read_parquet("data-raw/sim/data/sim_dat_e3.parquet")
+
+if(!exists("ref_metadata_e3")){
+  sim_dat_e3 <- read_parquet("data-raw/sim/data/sim_dat_e3.parquet")
   #adding reference data
   ref_metadata_e3 <- sim_dat_e3%>%
     group_by(func, param, rep, error, dup, scenario_id)%>%
@@ -311,6 +449,7 @@ sim_dat_e3 <- read_parquet("data-raw/sim/data/sim_dat_e3.parquet")
                             func == "var-p-skew" ~ (param*10-1)/(param*10+(10-param*10)-2),
                             func== "var-p-width" ~ 0.5))%>%
     ungroup()
+}
 
 e3_gam_params <- read_parquet("data-raw/sim/results/gam_params_e3.parquet")
 e3_gam_params <- full_join(ref_metadata_e3, e3_gam_params, by="sample_id")
@@ -328,7 +467,10 @@ e3_summary <- get_results(peak_test = e3_peaktest_results,
                           lextr_gr =  e3_lextrema_results_gratia, 
                           gam_params = e3_gam_params, 
                           func_type_p = c("var-p-location", "var-p-skew","var-p-width" ),
-                          func_type_np = NULL)
+                          func_type_np = NULL,
+                          me = TRUE)
+
+saveRDS(object = e3_summary, file = "data-raw/sim/analy_results/e3_summary.RDS")
 
 e3_coverage_long <- tidyr::pivot_longer(data=e3_summary$coverage, cols = c("coverage_me", "coverage_me_max", "coverage_gr", "coverage_gr_max"), names_to = "cov_type", values_to = "coverage")
 
@@ -351,6 +493,8 @@ plot_e3_5$model_plot+
 #Experiment 4
 ```{r}
 setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
+
+if(!exists("ref_metadata_e4")){
 sim_dat_e4 <- read_parquet("data-raw/sim/data/sim_dat_e4.parquet")
   #adding reference data
   ref_metadata_e4 <- sim_dat_e4%>%
@@ -358,12 +502,10 @@ sim_dat_e4 <- read_parquet("data-raw/sim/data/sim_dat_e4.parquet")
     summarize(sample_id=first(sample_id))%>%
     mutate(peak = NA)%>%
     ungroup()
+}
 
 e4_gam_params <- read_parquet("data-raw/sim/results/gam_params_e4.parquet")
 e4_gam_params <- full_join(ref_metadata_e4, e4_gam_params, by="sample_id")
-
-# e4_lextrema_results_me <- read_parquet("data-raw/sim/results/lextrema_results_me_e4.parquet")
-# e4_lextrema_results_me <- full_join(ref_metadata_e4, e4_lextrema_results_me, by="sample_id")
 
 e4_lextrema_results_gratia <- read_parquet("data-raw/sim/results/lextrema_results_gr_e4.parquet")
 e4_lextrema_results_gratia <- full_join(ref_metadata_e4, e4_lextrema_results_gratia, by="sample_id")
@@ -375,7 +517,10 @@ e4_summary <- get_results(peak_test = e4_peaktest_results,
                           lextr_gr =  e4_lextrema_results_gratia, 
                           gam_params = e4_gam_params, 
                           func_type_p = NULL,
-                          func_type_np = c("var-curvature", "var-location", "var-scale") )
+                          func_type_np = c("var-curvature", "var-location", "var-scale"), 
+                          me = FALSE)
+
+saveRDS(object = e4_summary, file = "data-raw/sim/analy_results/e4_summary.RDS")
 
 e4_fperror_long <- tidyr::pivot_longer(data=e4_summary$fperror, cols = c("quad", "rprop", "pr_gr"), names_to = "fpe_type", values_to = "fperror")
 
@@ -390,7 +535,8 @@ ggplot(data=e4_fperror_long)+
 ```{r}
 setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
 
-sim_dat_e1 <- read_parquet("data-raw/sim/data/sim_dat_e1.parquet")
+if(!exists("ref_metadata_e1")){
+  sim_dat_e1 <- read_parquet("data-raw/sim/data/sim_dat_e1.parquet")
   #adding reference data
   ref_metadata_e1 <- sim_dat_e1%>%
     group_by(func, param, rep, error, dup, scenario_id)%>%
@@ -398,6 +544,7 @@ sim_dat_e1 <- read_parquet("data-raw/sim/data/sim_dat_e1.parquet")
     mutate(peak = case_when(func=="norm"~param,
                             func == "linear"~NA))%>%
     ungroup()
+}
 
 e1_gam_params_tprs <- read_parquet("data-raw/sim/results/gam_params_e1_tprs.parquet")
 e1_gam_params_tprs <- full_join(ref_metadata_e1, e1_gam_params_tprs, by="sample_id")
@@ -412,17 +559,19 @@ e1_summary_tprs <- get_results(peak_test = e1_peaktest_results_tprs,
                           lextr_gr =  e1_lextrema_results_gratia_tprs,
                           gam_params = e1_gam_params_tprs,
                           func_type_p = "norm",
-                          func_type_np = "linear")
-
-sim_dat_e2 <- read_parquet("data-raw/sim/data/sim_dat_e2.parquet")
+                          func_type_np = "linear",
+                          me = FALSE)
+#exp 2
+if(!exists("ref_metadata_e2")) {
+  sim_dat_e2 <- read_parquet("data-raw/sim/data/sim_dat_e2.parquet")
   #adding reference data
   ref_metadata_e2 <- sim_dat_e2%>%
     group_by(func, param, rep, error, dup, scenario_id)%>%
     summarize(sample_id=first(sample_id))%>%
-        mutate(peak = case_when(func=="norm"~param,
+    mutate(peak = case_when(func=="norm"~param,
                             func == "linear"~NA))%>%
     ungroup()
-
+}
 e2_gam_params_tprs <- read_parquet("data-raw/sim/results/gam_params_e2_tprs.parquet")
 e2_gam_params_tprs <- full_join(ref_metadata_e2, e2_gam_params_tprs, by="sample_id")
 
@@ -436,9 +585,11 @@ e2_summary_tprs <- get_results(peak_test = e2_peaktest_results_tprs,
                           lextr_gr =  e2_lextrema_results_gratia_tprs, 
                           gam_params = e2_gam_params_tprs, 
                           func_type_p = "norm", 
-                          func_type_np = "linear")
-
-sim_dat_e3 <- read_parquet("data-raw/sim/data/sim_dat_e3.parquet")
+                          func_type_np = "linear",
+                          me = FALSE)
+# exp 3
+if(!exists("ref_metadata_e3")){
+  sim_dat_e3 <- read_parquet("data-raw/sim/data/sim_dat_e3.parquet")
   #adding reference data
   ref_metadata_e3 <- sim_dat_e3%>%
     group_by(func, param, rep, error, dup, scenario_id)%>%
@@ -447,7 +598,7 @@ sim_dat_e3 <- read_parquet("data-raw/sim/data/sim_dat_e3.parquet")
                             func == "var-p-skew" ~ (param*10-1)/(param*10+(10-param*10)-2),
                             func== "var-p-width" ~ 0.5))%>%
     ungroup()
-
+}
 e3_gam_params_tprs <- read_parquet("data-raw/sim/results/gam_params_e3_tprs.parquet")
 e3_gam_params_tprs <- full_join(ref_metadata_e3, e3_gam_params_tprs, by="sample_id")
 
@@ -461,15 +612,19 @@ e3_summary_tprs <- get_results(peak_test = e3_peaktest_results_tprs,
                           lextr_gr =  e3_lextrema_results_gratia_tprs, 
                           gam_params = e3_gam_params_tprs, 
                           func_type_p = c("var-p-location", "var-p-skew","var-p-width" ),
-                          func_type_np = NULL)
+                          func_type_np = NULL,
+                          me = FALSE)
 
-sim_dat_e4 <- read_parquet("data-raw/sim/data/sim_dat_e4.parquet")
+#exp4
+if(!exists("ref_metadata_e4")){
+  sim_dat_e4 <- read_parquet("data-raw/sim/data/sim_dat_e4.parquet")
   #adding reference data
   ref_metadata_e4 <- sim_dat_e4%>%
     group_by(func, param, rep, error, dup, scenario_id)%>%
     summarize(sample_id=first(sample_id))%>%
     mutate(peak = NA)%>%
     ungroup()
+}
 
 e4_gam_params_tprs <- read_parquet("data-raw/sim/results/gam_params_e4_tprs.parquet")
 e4_gam_params_tprs <- full_join(ref_metadata_e4, e4_gam_params_tprs, by="sample_id")
@@ -484,14 +639,28 @@ e4_summary_tprs <- get_results(peak_test = e4_peaktest_results_tprs,
                           lextr_gr =  e4_lextrema_results_gratia_tprs, 
                           gam_params = e4_gam_params_tprs, 
                           func_type_p = NULL,
-                          func_type_np = c("var-curvature", "var-location", "var-scale") )
+                          func_type_np = c("var-curvature", "var-location", "var-scale"),
+                          me = FALSE)
+
+e1_4_summary_tprs <- list(
+  e1 = e1_summary_tprs,
+  e2 = e2_summary_tprs, 
+  e3 = e3_summary_tprs,
+  e4 = e4_summary_tprs
+)
+
+
+setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
+
+saveRDS(e1_4_summary_tprs, "data-raw/sim/analy_results/e1_4_summary_tprs.RDS")
 ```
 
-#experiment 1-4 adjalpha default
+#experiment 1-4 adjalpha tprs
 ```{r}
 setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
 
-sim_dat_e1 <- read_parquet("data-raw/sim/data/sim_dat_e1.parquet")
+if(!exists("ref_metadata_e1")){
+  sim_dat_e1 <- read_parquet("data-raw/sim/data/sim_dat_e1.parquet")
   #adding reference data
   ref_metadata_e1 <- sim_dat_e1%>%
     group_by(func, param, rep, error, dup, scenario_id)%>%
@@ -499,7 +668,7 @@ sim_dat_e1 <- read_parquet("data-raw/sim/data/sim_dat_e1.parquet")
     mutate(peak = case_when(func=="norm"~param,
                             func == "linear"~NA))%>%
     ungroup()
-
+}
 e1_gam_params_adjalpha <- read_parquet("data-raw/sim/results/gam_params_e1_adjalpha.parquet")
 e1_gam_params_adjalpha <- full_join(ref_metadata_e1, e1_gam_params_adjalpha, by="sample_id")
 
@@ -513,8 +682,10 @@ e1_summary_adjalpha <- get_results(peak_test = e1_peaktest_results_adjalpha,
                           lextr_gr =  e1_lextrema_results_gratia_adjalpha,
                           gam_params = e1_gam_params_adjalpha,
                           func_type_p = "norm",
-                          func_type_np = "linear")
+                          func_type_np = "linear",
+                          me = FALSE)
 
+if(!exists("ref_metadata_e2")){
 sim_dat_e2 <- read_parquet("data-raw/sim/data/sim_dat_e2.parquet")
   #adding reference data
   ref_metadata_e2 <- sim_dat_e2%>%
@@ -523,6 +694,7 @@ sim_dat_e2 <- read_parquet("data-raw/sim/data/sim_dat_e2.parquet")
         mutate(peak = case_when(func=="norm"~param,
                             func == "linear"~NA))%>%
     ungroup()
+}
 
 e2_gam_params_adjalpha <- read_parquet("data-raw/sim/results/gam_params_e2_adjalpha.parquet")
 e2_gam_params_adjalpha <- full_join(ref_metadata_e2, e2_gam_params_adjalpha, by="sample_id")
@@ -537,9 +709,12 @@ e2_summary_adjalpha <- get_results(peak_test = e2_peaktest_results_adjalpha,
                           lextr_gr =  e2_lextrema_results_gratia_adjalpha, 
                           gam_params = e2_gam_params_adjalpha, 
                           func_type_p = "norm", 
-                          func_type_np = "linear")
+                          func_type_np = "linear",
+                          me = FALSE)
 
-sim_dat_e3 <- read_parquet("data-raw/sim/data/sim_dat_e3.parquet")
+#exp 3
+if(!exists("ref_metadata_e3")){
+  sim_dat_e3 <- read_parquet("data-raw/sim/data/sim_dat_e3.parquet")
   #adding reference data
   ref_metadata_e3 <- sim_dat_e3%>%
     group_by(func, param, rep, error, dup, scenario_id)%>%
@@ -548,7 +723,7 @@ sim_dat_e3 <- read_parquet("data-raw/sim/data/sim_dat_e3.parquet")
                             func == "var-p-skew" ~ (param*10-1)/(param*10+(10-param*10)-2),
                             func== "var-p-width" ~ 0.5))%>%
     ungroup()
-
+}
 e3_gam_params_adjalpha <- read_parquet("data-raw/sim/results/gam_params_e3_adjalpha.parquet")
 e3_gam_params_adjalpha <- full_join(ref_metadata_e3, e3_gam_params_adjalpha, by="sample_id")
 
@@ -562,15 +737,19 @@ e3_summary_adjalpha <- get_results(peak_test = e3_peaktest_results_adjalpha,
                           lextr_gr =  e3_lextrema_results_gratia_adjalpha, 
                           gam_params = e3_gam_params_adjalpha, 
                           func_type_p = c("var-p-location", "var-p-skew","var-p-width" ),
-                          func_type_np = NULL)
+                          func_type_np = NULL,
+                          me = FALSE)
 
-sim_dat_e4 <- read_parquet("data-raw/sim/data/sim_dat_e4.parquet")
+#exp 4
+if(!exists("ref_metadata_e4")){
+  sim_dat_e4 <- read_parquet("data-raw/sim/data/sim_dat_e4.parquet")
   #adding reference data
   ref_metadata_e4 <- sim_dat_e4%>%
     group_by(func, param, rep, error, dup, scenario_id)%>%
     summarize(sample_id=first(sample_id))%>%
     mutate(peak = NA)%>%
     ungroup()
+}
 
 e4_gam_params_adjalpha <- read_parquet("data-raw/sim/results/gam_params_e4_adjalpha.parquet")
 e4_gam_params_adjalpha <- full_join(ref_metadata_e4, e4_gam_params_adjalpha, by="sample_id")
@@ -583,10 +762,150 @@ e4_peaktest_results_adjalpha <- read_parquet("data-raw/sim/results/peaktest_resu
 e4_summary_adjalpha <- get_results(peak_test = e4_peaktest_results_adjalpha,
                           lextr_me =e4_lextrema_results_gratia_adjalpha, 
                           lextr_gr =  e4_lextrema_results_gratia_adjalpha, 
-                          gam_params = e4_gam_params_alpha, 
+                          gam_params = e4_gam_params_adjalpha, 
                           func_type_p = NULL,
-                          func_type_np = c("var-curvature", "var-location", "var-scale") )
+                          func_type_np = c("var-curvature", "var-location", "var-scale"),
+                          me = FALSE)
+
+e1_4_summary_adjalpha <- list(
+  e1 = e1_summary_adjalpha,
+  e2 = e2_summary_adjalpha, 
+  e3 = e3_summary_adjalpha,
+  e4 = e4_summary_adjalpha
+)
+
+setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
+
+saveRDS(e1_4_summary_adjalpha, "data-raw/sim/analy_results/e1_4_summary_adjalpha.RDS")
+
 ```
+#experiment 1-4 adjalpha ad
+```{r}
+setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
+
+if(!exists("ref_metadata_e1")){
+  sim_dat_e1 <- read_parquet("data-raw/sim/data/sim_dat_e1.parquet")
+  #adding reference data
+  ref_metadata_e1 <- sim_dat_e1%>%
+    group_by(func, param, rep, error, dup, scenario_id)%>%
+    summarize(sample_id=first(sample_id))%>%
+    mutate(peak = case_when(func=="norm"~param,
+                            func == "linear"~NA))%>%
+    ungroup()
+}
+e1_gam_params_adjalpha_ad <- read_parquet("data-raw/sim/results/gam_params_e1_adjalpha_ad.parquet")
+e1_gam_params_adjalpha_ad <- full_join(ref_metadata_e1, e1_gam_params_adjalpha_ad, by="sample_id")
+
+e1_lextrema_results_gratia_adjalpha_ad <- read_parquet("data-raw/sim/results/lextrema_results_gr_e1_adjalpha_ad.parquet")
+e1_lextrema_results_gratia_adjalpha_ad <- full_join(ref_metadata_e1, e1_lextrema_results_gratia_adjalpha_ad, by="sample_id")
+
+e1_peaktest_results_adjalpha_ad <- read_parquet("data-raw/sim/results/peaktest_results_e1_adjalpha_ad.parquet")
+
+e1_summary_adjalpha_ad <- get_results(peak_test = e1_peaktest_results_adjalpha_ad,
+                          lextr_me =e1_lextrema_results_gratia_adjalpha_ad,
+                          lextr_gr =  e1_lextrema_results_gratia_adjalpha_ad,
+                          gam_params = e1_gam_params_adjalpha_ad,
+                          func_type_p = "norm",
+                          func_type_np = "linear",
+                          me = FALSE)
+
+#Exp 2
+if(!exists("ref_metadata_e2")){
+sim_dat_e2 <- read_parquet("data-raw/sim/data/sim_dat_e2.parquet")
+  #adding reference data
+  ref_metadata_e2 <- sim_dat_e2%>%
+    group_by(func, param, rep, error, dup, scenario_id)%>%
+    summarize(sample_id=first(sample_id))%>%
+        mutate(peak = case_when(func=="norm"~param,
+                            func == "linear"~NA))%>%
+    ungroup()
+}
+
+e2_gam_params_adjalpha_ad <- read_parquet("data-raw/sim/results/gam_params_e2_adjalpha_ad.parquet")
+e2_gam_params_adjalpha_ad <- full_join(ref_metadata_e2, e2_gam_params_adjalpha_ad, by="sample_id")
+
+e2_lextrema_results_gratia_adjalpha_ad <- read_parquet("data-raw/sim/results/lextrema_results_gr_e2_adjalpha_ad.parquet")
+e2_lextrema_results_gratia_adjalpha_ad <- full_join(ref_metadata_e2, e2_lextrema_results_gratia_adjalpha_ad, by="sample_id")
+
+e2_peaktest_results_adjalpha_ad <- read_parquet("data-raw/sim/results/peaktest_results_e2_adjalpha_ad.parquet")
+ 
+e2_summary_adjalpha_ad <- get_results(peak_test = e2_peaktest_results_adjalpha_ad,
+                          lextr_me =e2_lextrema_results_gratia_adjalpha_ad, 
+                          lextr_gr =  e2_lextrema_results_gratia_adjalpha_ad, 
+                          gam_params = e2_gam_params_adjalpha_ad, 
+                          func_type_p = "norm", 
+                          func_type_np = "linear",
+                          me = FALSE)
+
+#exp 3
+if(!exists("ref_metadata_e3")){
+  sim_dat_e3 <- read_parquet("data-raw/sim/data/sim_dat_e3.parquet")
+  #adding reference data
+  ref_metadata_e3 <- sim_dat_e3%>%
+    group_by(func, param, rep, error, dup, scenario_id)%>%
+    summarize(sample_id=first(sample_id))%>%
+    mutate(peak = case_when(func == "var-p-location" ~ param,
+                            func == "var-p-skew" ~ (param*10-1)/(param*10+(10-param*10)-2),
+                            func== "var-p-width" ~ 0.5))%>%
+    ungroup()
+}
+e3_gam_params_adjalpha_ad <- read_parquet("data-raw/sim/results/gam_params_e3_adjalpha_ad.parquet")
+e3_gam_params_adjalpha_ad <- full_join(ref_metadata_e3, e3_gam_params_adjalpha_ad, by="sample_id")
+
+e3_lextrema_results_gratia_adjalpha_ad <- read_parquet("data-raw/sim/results/lextrema_results_gr_e3_adjalpha_ad.parquet")
+e3_lextrema_results_gratia_adjalpha_ad <- full_join(ref_metadata_e3, e3_lextrema_results_gratia_adjalpha_ad, by="sample_id")
+
+e3_peaktest_results_adjalpha_ad <- read_parquet("data-raw/sim/results/peaktest_results_e3_adjalpha_ad.parquet")
+ 
+e3_summary_adjalpha_ad <- get_results(peak_test = e3_peaktest_results_adjalpha_ad,
+                          lextr_me =e3_lextrema_results_gratia_adjalpha_ad, 
+                          lextr_gr =  e3_lextrema_results_gratia_adjalpha_ad, 
+                          gam_params = e3_gam_params_adjalpha_ad, 
+                          func_type_p = c("var-p-location", "var-p-skew","var-p-width" ),
+                          func_type_np = NULL,
+                          me = FALSE)
+
+#exp 4
+if(!exists("ref_metadata_e4")){
+  sim_dat_e4 <- read_parquet("data-raw/sim/data/sim_dat_e4.parquet")
+  #adding reference data
+  ref_metadata_e4 <- sim_dat_e4%>%
+    group_by(func, param, rep, error, dup, scenario_id)%>%
+    summarize(sample_id=first(sample_id))%>%
+    mutate(peak = NA)%>%
+    ungroup()
+}
+
+e4_gam_params_adjalpha_ad <- read_parquet("data-raw/sim/results/gam_params_e4_adjalpha_ad.parquet")
+e4_gam_params_adjalpha_ad <- full_join(ref_metadata_e4, e4_gam_params_adjalpha_ad, by="sample_id")
+
+e4_lextrema_results_gratia_adjalpha_ad <- read_parquet("data-raw/sim/results/lextrema_results_gr_e4_adjalpha_ad.parquet")
+e4_lextrema_results_gratia_adjalpha_ad <- full_join(ref_metadata_e4, e4_lextrema_results_gratia_adjalpha_ad, by="sample_id")
+
+e4_peaktest_results_adjalpha_ad <- read_parquet("data-raw/sim/results/peaktest_results_e4_adjalpha_ad.parquet")
+ 
+e4_summary_adjalpha_ad <- get_results(peak_test = e4_peaktest_results_adjalpha_ad,
+                          lextr_me =e4_lextrema_results_gratia_adjalpha_ad, 
+                          lextr_gr =  e4_lextrema_results_gratia_adjalpha_ad, 
+                          gam_params = e4_gam_params_adjalpha, 
+                          func_type_p = NULL,
+                          func_type_np = c("var-curvature", "var-location", "var-scale"),
+                          me = FALSE)
+
+e1_4_summary_adjalpha_ad <- list(
+  e1 = e1_summary_adjalpha_ad,
+  e2 = e2_summary_adjalpha_ad, 
+  e3 = e3_summary_adjalpha_ad,
+  e4 = e4_summary_adjalpha_ad
+)
+
+
+setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
+
+saveRDS(e1_4_summary_adjalpha_ad, "data-raw/sim/analy_results/e1_4_summary_adjalpha_ad.RDS")
+```
+
+
 
 ```{r}
 # 
