--- a/vignettes/S01-generate_sim_data.Rmd
+++ b/vignettes/S01-generate_sim_data.Rmd
@@ -40,7 +40,7 @@ func <- c("norm", "linear")
 param <-0.5
 n <- c(21, 42, 63, 84, 105)
 dup <- c(1, 2, 3, 4, 5)
-error <- 0.75 #DOUBLE CHECK
+error <- 0.5 
 list_names <- c("n_21", "n_42", "n_63", "n_84", "n_105")
 
 sim_dat_e1 <- expand_grid(func = func,
@@ -69,7 +69,8 @@ write_parquet(x = sim_dat_e1, "data-raw/sim/data/sim_dat_e1.parquet")
 
 sim_dat_e1_plot <- ggplot(data=filter(sim_dat_e1, rep==1))+
   geom_point(aes(x=x, y=y, colour=error), size=0.1)+
-  geom_smooth(aes(x=x, y=y, colour=error))+
+  geom_line(aes(x=x, y=y_true, colour = error))+
+  #geom_smooth(aes(x=x, y=y, colour=error))+
   facet_grid(func~dup)
 sim_dat_e1_plot
 
@@ -185,7 +186,10 @@ ggplot(data=filter(sim_dat_e3, rep==1, func=="var-p-width"))+
   #geom_point(aes(x=x, y=y, colour=as.factor(param)))+
   geom_line(aes(x=x, y=y_true, colour=as.factor(param)))
   #facet_wrap(~as.factor(param))
-
+ggplot(data=filter(sim_dat_e3, rep==1, dup==1))+
+    #geom_point(aes(x=x, y=y, colour=as.factor(param)))+
+     geom_line(aes(x=x, y=y_true, colour=as.factor(param)))+
+   facet_grid(~func)
 
 ```
 
@@ -241,6 +245,8 @@ ggplot(data=filter(sim_dat_e4, rep==1, param<0.52&param>0.49, func=="var-locatio
   geom_line(aes(x=x, y=y_true, colour=as.factor(param)))+
   geom_smooth(aes(x=x, y=y))+
   facet_wrap(~dup)
+
+
 ```
 
 ```{r }
