--- a/vignettes/S04-analyze_real_data.Rmd
+++ b/vignettes/S04-analyze_real_data.Rmd
@@ -85,15 +85,18 @@ b2021_quad <- lextremagam:::peaktest_quad(x = bishop2021$temperature,
 b2021_tl <- lextremagam:::peaktest_twolines(x = bishop2021$temperature, 
                                              y = bishop2021$specific_growth_rate)
 #lextremagam
-b2021_gam <- gam(specific_growth_rate~s(temperature, by=as.factor(species), k=5), method="REML", data=bishop2021)
+bishop2021$species <- as.factor(bishop2021$species)
+b2021_gam <- gam(specific_growth_rate~s(temperature, by=species, k=5), method="REML", data=bishop2021)
 
-b2021_lextr <- lextremagam::quantify_lextrema2(mod = b2021_gam, 
-                                                 var = "temperature", 
-                                                 step_size=0.015,
-                                                 conf_level = 0.95, 
-                                                 deriv_method = "gratia")
+b2021_lextr_ac <- lextremagam::quantify_lextrema2(mod = b2021_gam, 
+                                               var = "temperature", 
+                                               step_size=0.015,
+                                               conf_level = 0.95, 
+                                               deriv_method = "gratia", 
+                                               multivariate = TRUE, 
+                                               smooth = "s(temperature):speciesActinocyclus curvatulus")
 
-b2021_lextr_plot <- plot_lextrema(quant_segments = b2021_lextr, plot_deriv = TRUE)
+b2021_lextr_plot <- plot_lextrema(quant_segments = b2021_lextr_ac, plot_deriv = TRUE)
 
 
 ```
